--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>iInfoDales Tech Solution</title>
+		<title>InfoDales Tech Solution</title>
 	<head>
 	<body>
 		<h3>Welcome to InfoDales Solutions!</h3>
