--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 	<head>
 	<body>
 		<h3>Welcome to InfoDales Solutions!</h3>
+		<br>
+		<p> The site will be live soon....</p>
+		
+		
 	</body>
 </html>
