Modified Contact US page

--- a/contact.html
+++ b/contact.html
@@ -39,17 +39,7 @@
 	<div id="adbox">
 		<div class="clearfix">
 			<div>
-				<p>
-				We at InfoDales are positioned as one of the top engineers of the IT
-				industry offering quick, concise, and reliable services catering to various industries
-				like and other industries verticals.
-				</br>&nbsp
-				</br>
-				We design, develop and customize web platforms that are maintainable and
-				technical debt-free in long term, which requires years and years of hands-on
-				development experience. Our customer-centric solutions and architecting
-				experience help organizations to make a global footprint.
-				</p>
+				<b>Contact Us</b>
 			</div>
 		</div>
 	</div>
