--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 	<meta name="description" content="IT Consulting Services" />
 	<meta property="og:title" content="InfoDales Tech Solutions" />
 	<meta property="og:description" content="IT Consulting Services" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	  <!-- Bootstrap CSS -->
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity=
+	  "sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"crossorigin="anonymous" />
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/mobile.css" type="text/css">
+	<link rel="stylesheet" href="css/tablet.css" type="text/css">
+
+	
 </head>
 <body>
+
+	<!--
 	<div id="header">
 		<div>
 			<div style="width:25%;float:left;margin-top:-10px;">
@@ -29,50 +42,111 @@
 				<li>
 					<a href="contact.html">Contact</a>
 				</li>
+				
 			</ul>
 		</div>
-	</div>
-	
-	<div id="adbox">
-		<div class="clearfix">
-			<div>
-				<p>
-				We at InfoDales are positioned as one of the top engineers of the IT
-				industry offering quick, concise, and reliable services catering to various industries
-				like and other industries verticals.
-				</br>&nbsp
-				</br>
-				We design, develop and customize web platforms that are maintainable and
-				technical debt-free in long term, which requires years and years of hands-on
-				development experience. Our customer-centric solutions and architecting
-				experience help organizations to make a global footprint.
-				</p>
+	</div>-->
+	<header >
+		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
+			<nav class="navbar navbar-expand-lg navbar-light ">
+				<div class="container">
+					<div style="width:25%;float:left;margin-top:-10px;">
+					<a href="#" class=""><img src="./images/logo-4.png" style="width:275px;"></img></a></div>
+
+					<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarCollapse">
+						<div class="navbar-nav">
+									<a class="nav-item nav-link nav-link-infodales active" href="index.html">Home</a>
+									<a class="nav-item nav-link" href="services.html">Services</a>
+									<a class="nav-item nav-link" href="trainings.html">Trainings</a>
+									<a class="nav-item nav-link "href="about.html">About Us</a>
+									<a class="nav-item nav-link " href="contact.html">Contact</a>
+						</div>
+						
+					</div>
+				</div>
+			</nav>
+		</section>
+		<section class="infodales-banner">
+			<div class="clearfix">
+				<div>
+					<p>
+					We at InfoDales are positioned as one of the top engineers of the IT
+					industry offering quick, concise, and reliable services catering to various industries
+					like and other industries verticals.
+					<br>&nbsp;
+					<br>
+					We design, develop and customize web platforms that are maintainable and
+					technical debt-free in long term, which requires years and years of hands-on
+					development experience. Our customer-centric solutions and architecting
+					experience help organizations to make a global footprint.
+					</p>
+				</div>
 			</div>
-		</div>
-	</div>
+		</section>
+		
 	
-	<div id="contents">
-		<div id="tagline">
-			<h1>Our Services.</h1>
-			<div>
-				<p>
-				Java :
-				We deliver solutions on Spring frameworks to build quick backend services.
-				</p>
-				<p>
-				Testing :
-				Along with developing the solution we have expertise in manual and automation testing.
-				We have extensively worked on Automation frameworks such as Selenium and Cypress.
-				</p>
-				<p>
-				Frontend :
-				UI being the integral part of the web applications we develop intuitive and robust web
-				interfaces in HTML, CSS, Javascript in React JS, AngularJs with Web Accessibility.
-				</p>
-			</div>
-		</div>
-	</div>
+	</header>
+
+
+	<main class="container-fluid">
+		<section style="background-color: #e6e6e6;height: 15px;"></section>
 	
+		
+		<section class="container-fluid" style="padding: 60px 0; background-color: transparent;">
+			<div class="container">
+				<div class="cards-layout">
+				  <div class="col-md-3 cards">
+					<div class="card card-1">
+					  <h3>AEM</h3>
+					  <p>A curated set of   ES5/ES6/TypeScript wrappers for plugins to easily add any native functionality to your Ionic apps.</p>
+					</div>
+				  </div>
+				  <div class="col-md-3 cards">
+					<div class="card card-2">
+					  <h3>Java</h3>
+					  <p>Tabs, buttons, inputs, lists, cards, and more! A comprehensive library
+						of mobile UI components, ready to go.</p>
+					</div>
+				  </div>
+				  <div class="col-md-3 cards">
+					<div class="card card-3">
+					  <h3>Salesforce</h3>
+					  <p>Learn how to easily customize and modify your app’s design to fit your
+						brand across all mobile platform styles.</p>
+					</div>
+				  </div>
+				  <div class="col-md-3 cards">
+					<div class="card card-4">
+					  <h3>Software Testing</h3>
+					  <p>Learn how to easily customize and modify your app’s design to fit your
+						brand across all mobile platform styles.</p>
+					</div>
+				  </div>
+				  <div class="col-md-3 cards">
+					<div class="card card-5">
+					  <h3>AEM Authoring</h3>
+					  <p>Learn how to easily customize and modify your app’s design to fit your
+						brand across all mobile platform styles.</p>
+					</div>
+				  </div>
+				  <div class="col-md-3 cards">
+					<div class="card card-6">
+					  <h3>AEM Authoring</h3>
+					  <p>Learn how to easily customize and modify your app’s design to fit your
+						brand across all mobile platform styles.</p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+
+		</section>
+
+	
+
+ </main>
 	<div id="footer">
 		<div class="clearfix">
 			<!--div id="connect">
