--- a/index.html
+++ b/index.html
@@ -1,87 +1,160 @@
 <html>
-	<meta charset="UTF-8">
-	<title>InfoDales Tech Solution</title>
-	<meta name="description" content="IT Consulting Services" />
-	<meta property="og:title" content="InfoDales Tech Solutions" />
-	<meta property="og:description" content="IT Consulting Services" />
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-<body>
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	
-	<div id="adbox">
-		<div class="clearfix">
-			<div>
-				<p>
-				We at InfoDales are positioned as one of the top engineers of the IT
-				industry offering quick, concise, and reliable services catering to various industries
-				like and other industries verticals.
-				</br>&nbsp
-				</br>
-				We design, develop and customize web platforms that are maintainable and
-				technical debt-free in long term, which requires years and years of hands-on
-				development experience. Our customer-centric solutions and architecting
-				experience help organizations to make a global footprint.
-				</p>
-			</div>
-		</div>
-	</div>
-	
-	<div id="contents">
-		<div id="tagline">
-			<h1>Our Services.</h1>
-			<div>
-				<p>
-				Java :
-				We deliver solutions on Spring frameworks to build quick backend services.
-				</p>
-				<p>
-				Testing :
-				Along with developing the solution we have expertise in manual and automation testing.
-				We have extensively worked on Automation frameworks such as Selenium and Cypress.
-				</p>
-				<p>
-				Frontend :
-				UI being the integral part of the web applications we develop intuitive and robust web
-				interfaces in HTML, CSS, Javascript in React JS, AngularJs with Web Accessibility.
-				</p>
-			</div>
-		</div>
-	</div>
-	
-	<div id="footer">
-		<div class="clearfix">
-			<!--div id="connect">
+    <head>
+        <meta charset="UTF-8" />
+        <title>InfoDales Tech Solution</title>
+        <meta name="description" content="IT Consulting Services" />
+        <meta property="og:title" content="InfoDales Tech Solutions" />
+        <meta property="og:description" content="IT Consulting Services" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="css/mobile.css" type="text/css" />
+        <link rel="stylesheet" href="css/tablet.css" type="text/css" />
+    </head>
+    <body>
+        <header>
+            <section class="m-0 infodales-header" style="background-color: #282836; border-bottom: 1px solid #e6e6e6;">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container">
+                        <div style="width: 25%; float: left; margin-top: -10px;">
+                            <a href="#" class=""><img src="./images/logo-4.png" style="width: 275px;" /></a>
+                        </div>
+                        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarCollapse">
+                            <div class="navbar-nav">
+                                <a class="nav-item nav-link nav-link-infodales active" href="index.html">Home</a>
+                                <a class="nav-item nav-link" href="services.html">Services</a>
+                                <a class="nav-item nav-link" href="trainings.html">Trainings</a>
+                                <a class="nav-item nav-link" href="about.html">About Us</a>
+                                <a class="nav-item nav-link" href="contact.html">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </section>
+            <section class="infodales-banner">
+                <div class="clearfix">
+					<div class="left">
+						<div style="color:#282836;font-size:35px;font-weight:900;">
+							<span>
+								Accelerating your solution with our Knowledge and Resources.
+							</span>
+						</div>
+						<div>
+							<p>
+							We at InfoDales are positioned as one of the top engineers of the IT
+							industry offering quick, concise, and reliable services catering to various industries
+							like and other industries verticals.
+							<br>&nbsp;
+							<br>
+							We design, develop and customize web platforms that are maintainable and
+							technical debt-free in long term, which requires years and years of hands-on
+							development experience. Our customer-centric solutions and architecting
+							experience help organizations to make a global footprint.
+							</p>
+						</div>
+					</div>
+                </div>
+            </section>
+        </header>
+
+        <main class="container-fluid">
+            
+			<section style="background-color: #fff; height: auto; padding: 40px 0;">
+                <div class="container">
+                    <div class="infodales-heading">
+                        Who we are
+                    </div>
+                    <div class="infodales-text">
+                        Our team has a solid programming foundation and in-depth knowledge. Our team has acquired various difficult certifications, which makes us one of the best in the market.
+						We have proven abilities to design solutions according to customer needs with best practices and solutions flexible enough to expand further. 
+						Being a full-stack team, we have worked on frontend technologies, automation frameworks for quality control, and production deployments using the Jenkins CI/CD pipelines.
+                    </div>
+                </div>
+            </section>
+
+            <section class="" style="padding: 60px 0; background: url(./images/geometric-g46801d394_1920.jpg) no-repeat;">
+                <div class="container">
+                    <div class="cards-layout">
+                        <div class="col-md-3 cards">
+                            <div class="card card-1">
+                                <h3>Adobe Experiece Manager</h3>
+                                <p>We deliver AEM development services and solutions to adapt to your future business needs. The unique AEM CMS solutions that we craft are each designed to maximize your engagement impact.</p>
+                                <div style="margin-top: auto;">
+                                    <a href="./services/aem.html" style="color: #0385c2; text-decoration: none;">
+                                        See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 cards">
+                            <div class="card card-2">
+                                <h3>Salesforce</h3>
+                                <p>We deploy robust Salesforce cloud solutions to automate and manage marketing, sales, and customer service functions and drive digital transformation and innovation of enterprises.</p>
+                                <div style="margin-top: auto;">
+                                    <a href="./services/salesforce.html" style="color: #0385c2; text-decoration: none;">
+                                        See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+						<div class="col-md-3 cards">
+                            <div class="card card-3">
+                                <h3>Dev Ops</h3>
+                                <p>Optimize business infrastructures by leveraging our continuous delivery expertise to create full-fledged DevOps solutions with shorter time-to-market. Take advantage of the benefits of an automated cloud environment and save money on maintenance.</p>
+                                <div style="margin-top: auto;">
+                                    <a href="./services/devops.html" style="color: #0385c2; text-decoration: none;">
+                                        See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 cards">
+                            <div class="card card-4">
+                                <h3>Software Testing</h3>
+                                <p>We provide high Quality of product and services through modern automation process in Testing.</p>
+                                <div style="margin-top: auto;">
+                                    <a href="./services/testint.html" style="color: #0385c2; text-decoration: none;">
+                                        See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+			
+			<section  class="infodales-bios" style="background-color: #fff; height: auto; padding: 40px 0;">
+                <div class="container">
+                    <div class="infodales-heading">
+                        Our Team
+                    </div>
+                    <div class="infodales-text">
+                        We at InfoDales are positioned as one of the top engineers of the IT industry offering quick, concise, and reliable services catering to various industries like and other industries verticals. We design, develop and
+                        customize web platforms that are maintainable and technical debt-free in long term, which requires years and years of hands-on development experience. Our customer-centric solutions and architecting experience help
+                        organizations to make a global footprint.
+                    </div>
+                </div>
+            </section>
+			
+			</main>
+        <footer>
+            <div id="footer">
+                <div class="clearfix">
+                    <!--div id="connect">
 				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div-->
-			<p>
-				© 2023 InfoDales. All Rights Reserved.
-			</p>
-		</div>
-	</div>
-</body>
+                    <p>
+                        © 2023 InfoDales. All Rights Reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
