--- a/services/devops.html
+++ b/services/devops.html
@@ -12,41 +12,14 @@
 	  "sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"crossorigin="anonymous" />
 	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="stylesheet" href="css/mobile.css" type="text/css">
-	<link rel="stylesheet" href="css/tablet.css" type="text/css">
+	  <link rel="stylesheet" href="../css/style.css" type="text/css">
+	  <link rel="stylesheet" href="../css/mobile.css" type="text/css">
+	  <link rel="stylesheet" href="../css/tablet.css" type="text/css">
+  
 
 	
 </head>
 <body>
-
-	<!--
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>-->
 	<header >
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
@@ -93,11 +66,13 @@
 
 
 	<main class="container-fluid">
-		
+	
 	
 		
-		
 	
+	
+	
+		
 
 	
 
@@ -113,6 +88,6 @@
 			</p>
 		</div>
 	</div>
- </footer>>
+ </footer>
 </body>
 </html>
