--- a/services/testing.html
+++ b/services/testing.html
@@ -12,14 +12,13 @@
 	  "sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"crossorigin="anonymous" />
 	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-	  <link rel="stylesheet" href="../css/style.css" type="text/css">
-	  <link rel="stylesheet" href="../css/mobile.css" type="text/css">
-	  <link rel="stylesheet" href="../css/tablet.css" type="text/css">
-  
+	<link rel="stylesheet" href="../css/style.css" type="text/css">
+	<link rel="stylesheet" href="../css/mobile.css" type="text/css">
+	<link rel="stylesheet" href="../css/tablet.css" type="text/css">
 
 	
 </head>
-<body>
+<body style ="background: url(../images/banners/training2.jpg) no-repeat;">
 
 	<!--
 	<div id="header">
@@ -51,9 +50,9 @@
 	<header >
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
-				<div class="container">
+				<div class="container" style="padding-bottom: 0 !important;">
 					<div style="width:25%;float:left;margin-top:-10px;">
-					<a href="#" class=""><img src="./images/logo-4.png" style="width:275px;"></img></a></div>
+					<a href="#" class=""><img src="../images/logo-4.png" style="width:275px;"></img></a></div>
 
 					<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 						<span class="navbar-toggler-icon"></span>
@@ -71,29 +70,57 @@
 				</div>
 			</nav>
 		</section>
-		<section class="infodales-banner">
-			<div class="clearfix">
-				<div>
-					<p>
-					We at InfoDales are positioned as one of the top engineers of the IT
-					industry offering quick, concise, and reliable services catering to various industries
-					like and other industries verticals.
-					<br>&nbsp;
-					<br>
-					We design, develop and customize web platforms that are maintainable and
-					technical debt-free in long term, which requires years and years of hands-on
-					development experience. Our customer-centric solutions and architecting
-					experience help organizations to make a global footprint.
-					</p>
+		<section class="infodales-banner-training" style="background: transparent;">
+			
+				<div class="container infodales-banner-training">
+					<div class="row">
+						<div class="col-md-9 training-header">
+						<div class="container">
+							<div class="training-banner-header">
+								Salesforce
+							</div>
+							<div class="training-banner-summery">
+								<p>
+								Adobe Experience Manager is a content management 
+								solution that helps to build websites,forms and mobile 
+								apps.With the help of AEM, you can deliver lifetime value 
+								to your customer along with digital experiences so that it 
+								creates brand loyalty and drive more demand. It helps to stay 
+								consistent across different channels by delivering amazing content
+								 across websites and mobile.
+								</p>
+							</div>
+						</div>
+
+						</div>
+						<div class="col-md-1"></div>
+						<div class="col-md-2 training-logo" style="background-color: #e6e6e6;">
+							<img src="../images/public/cypress-removebg-preview.png" >
+						</div>
+					
 				</div>
-			</div>
+				</div>
+			
 		</section>
 		
 	
 	</header>
 
 
-	<main class="container-fluid">
+	<main class="container">
+		<section class="infodales-training-content">
+			<div class="col-md-8 training-content-left">
+				<h2 class="infodales-training-overview"></h2>
+
+			</div>
+			<div class="col-md-8 training-content-right">
+
+
+			</div>
+
+
+
+		</section>
 	
 	
 		
