--- a/services/aem.html
+++ b/services/aem.html
@@ -130,7 +130,7 @@
 							<h2 class="infodales-training-overview">AEM Training includes</h2>
 							<div class="row">
 								<div class="col-md-6 training-cource-includes-left">
-									<div class="container-fluid">
+									<div class="container-fluid infodales-includes-mobile">
 
 
 										<div class="row">
@@ -180,7 +180,7 @@
 								</div>
 
 								<div class="col-md-6 training-cource-includes-left">
-									<div class="container-fluid">
+									<div class="container-fluid infodales-includes-mobile">
 
 
 										<div class="row">
