mobile and tablet view fixes

--- a/services/aem.html
+++ b/services/aem.html
@@ -76,7 +76,7 @@
 		<section class="infodales-banner-training" style="background: transparent;">
 
 			<div class="container infodales-banner-training">
-				<div class="row">
+				<div class="row training-header-mobile">
 					<div class="col-md-9 training-header">
 						<div class="container">
 							<div class="training-banner-header">
