Training Pages setup

--- a/services/aem.html
+++ b/services/aem.html
@@ -19,35 +19,7 @@
 
 </head>
 
-<body style="background: url(../images/banners/training2.jpg) no-repeat;">
-
-	<!--
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>-->
+<body style="background: url(../images/banners/aem-banner.jpeg) no-repeat;">
 	<header>
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
@@ -62,11 +34,11 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<div class="navbar-nav">
-							<a class="nav-item nav-link nav-link-infodales active" href="index.html">Home</a>
-							<a class="nav-item nav-link" href="services.html">Services</a>
-							<a class="nav-item nav-link" href="trainings.html">Trainings</a>
-							<a class="nav-item nav-link " href="about.html">About Us</a>
-							<a class="nav-item nav-link " href="contact.html">Contact</a>
+							<a class="nav-item nav-link nav-link-infodales active" href="../index.html">Home</a>
+							<a class="nav-item nav-link" href="../services.html">Services</a>
+							<a class="nav-item nav-link" href="../trainings.html">Trainings</a>
+							<a class="nav-item nav-link " href="../about.html">About Us</a>
+							<a class="nav-item nav-link " href="../contact.html">Contact</a>
 						</div>
 
 					</div>
@@ -117,14 +89,8 @@
 					<div class=" col-md-7 col-sm-12 col-12 training-content-left">
 						<h2 class="infodales-training-overview">AEM Course Overview</h2>
 						<div class="infodales-training-summery">
-							<p>AEM 6.5 Training from Mindmajix teaches you the essential skills needed to develop and
-								debug Adobe Experience Management through best practices.
-								In this AEM course, you’ll learn the advanced methods used for developing websites being
-								an AEM developer.
-								The training starts with AEM basics and dives into central concepts like architecture,
-								installation, features, using AEM with Maven and VLT, etc.
-								By the time you’re done with this certification training, you’ll have the required skill
-								set to tackle advanced development challenges in AEM.</p>
+							<p>
+							In AEM training gives you Industrial level Knowledge of the tools. We cover basics and advance concept of AEM. AEM course will enable you to understand realtime use of the tool. After completion of this course you would be handle development challeges in AEM.</p>
 						</div>
 						<div class="infodales-cource-includes">
 							<h2 class="infodales-training-overview">AEM Training includes</h2>
@@ -165,17 +131,6 @@
 												<p style="font-weight: bold;">One-on-One doubt clearing</p>
 											</div>
 										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Realtime project usecases</p>
-											</div>
-										</div>
-
 									</div>
 								</div>
 
@@ -202,7 +157,7 @@
 											</div>
 											<div
 												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">certification oriented syllabus</p>
+												<p style="font-weight: bold;">Certification oriented syllabus</p>
 											</div>
 										</div>
 										<div class="row">
@@ -212,20 +167,9 @@
 											</div>
 											<div
 												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">One-on-One doubt clearing</p>
+												<p style="font-weight: bold;">Realtime project use-cases</p>
 											</div>
 										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Realtime project ysecases</p>
-											</div>
-										</div>
-
 									</div>
 								</div>
 							</div>
