--- a/services/java.html
+++ b/services/java.html
@@ -1,8 +1,8 @@
 <html>
 	<meta charset="UTF-8">
-	<title>InfoDales Tech Solution</title>
+	<title>AEM | InfoDales Tech Solution</title>
 	<meta name="description" content="IT Consulting Services" />
-	<meta property="og:title" content="InfoDales Tech Solutions" />
+	<meta property="og:title" content="AEM | InfoDales Tech Solutions" />
 	<meta property="og:description" content="IT Consulting Services" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -20,40 +20,12 @@
 	
 </head>
 <body>
-
-	<!--
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>-->
 	<header >
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
 				<div class="container">
 					<div style="width:25%;float:left;margin-top:-10px;">
-					<a href="#" class=""><img src="./images/logo-4.png" style="width:275px;"></img></a></div>
+					<a href="#" class=""><img src="../images/logo-4.png" style="width:275px;"></img></a></div>
 
 					<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 						<span class="navbar-toggler-icon"></span>
@@ -71,40 +43,19 @@
 				</div>
 			</nav>
 		</section>
-		<section class="infodales-banner">
+		<section class="java-banner">
 			<div class="clearfix">
 				<div>
-					<p>
-					We at InfoDales are positioned as one of the top engineers of the IT
-					industry offering quick, concise, and reliable services catering to various industries
-					like and other industries verticals.
-					<br>&nbsp;
-					<br>
-					We design, develop and customize web platforms that are maintainable and
-					technical debt-free in long term, which requires years and years of hands-on
-					development experience. Our customer-centric solutions and architecting
-					experience help organizations to make a global footprint.
-					</p>
+					
 				</div>
 			</div>
 		</section>
-		
-	
 	</header>
 
 
 	<main class="container-fluid">
-	
-	
-		
-	
-	
-	
-		
 
-	
-
- </main>
+	</main>
  <footer>
 	<div id="footer">
 		<div class="clearfix">
