--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </header>
 
         <main class="container-fluid">
-            
+			
 			<section style="background-color: #fff; height: auto; padding: 40px 0;">
                 <div class="container">
                     <div class="infodales-heading">
@@ -80,6 +80,7 @@
             </section>
 
             <section class="" style="padding: 60px 0; background: url(./images/geometric-g46801d394_1920.jpg) no-repeat;">
+				<h5 style="color:white"> Our Services </h5>
                 <div class="container">
                     <div class="cards-layout">
                         <div class="col-md-3 cards">
@@ -120,7 +121,7 @@
                                 <h3>Software Testing</h3>
                                 <p>We provide high Quality of product and services through modern automation process in Testing.</p>
                                 <div style="margin-top: auto;">
-                                    <a href="./services/testint.html" style="color: #0385c2; text-decoration: none;">
+                                    <a href="./services/testing.html" style="color: #0385c2; text-decoration: none;">
                                         See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
                                     </a>
                                 </div>
@@ -142,14 +143,10 @@
                     </div>
                 </div>
             </section>
-			
-			</main>
+		</main>
         <footer>
             <div id="footer">
                 <div class="clearfix">
-                    <!--div id="connect">
-				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
-			</div-->
                     <p>
                         © 2023 InfoDales. All Rights Reserved.
                     </p>
