--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </section>
 
             <section class="" style="padding: 60px 0; background: url(./images/geometric-g46801d394_1920.jpg) no-repeat;">
-				<h5 style="color:white"> Our Services </h5>
+				<h5 style="color:white"> Our Trainings </h5>
                 <div class="container">
                     <div class="cards-layout">
                         <div class="col-md-3 cards">
@@ -88,7 +88,7 @@
                                 <h3>Adobe Experiece Manager</h3>
                                 <p>We deliver AEM development services and solutions to adapt to your future business needs. The unique AEM CMS solutions that we craft are each designed to maximize your engagement impact.</p>
                                 <div style="margin-top: auto;">
-                                    <a href="./services/aem.html" style="color: #0385c2; text-decoration: none;">
+                                    <a href="./trainings/aem.html" style="color: #0385c2; text-decoration: none;">
                                         See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
                                     </a>
                                 </div>
@@ -99,7 +99,7 @@
                                 <h3>Salesforce</h3>
                                 <p>We deploy robust Salesforce cloud solutions to automate and manage marketing, sales, and customer service functions and drive digital transformation and innovation of enterprises.</p>
                                 <div style="margin-top: auto;">
-                                    <a href="./services/salesforce.html" style="color: #0385c2; text-decoration: none;">
+                                    <a href="./trainings/salesforce.html" style="color: #0385c2; text-decoration: none;">
                                         See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
                                     </a>
                                 </div>
@@ -110,7 +110,7 @@
                                 <h3>Dev Ops</h3>
                                 <p>Optimize business infrastructures by leveraging our continuous delivery expertise to create full-fledged DevOps solutions with shorter time-to-market. Take advantage of the benefits of an automated cloud environment and save money on maintenance.</p>
                                 <div style="margin-top: auto;">
-                                    <a href="./services/devops.html" style="color: #0385c2; text-decoration: none;">
+                                    <a href="./trainings/devops.html" style="color: #0385c2; text-decoration: none;">
                                         See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
                                     </a>
                                 </div>
@@ -121,7 +121,7 @@
                                 <h3>Software Testing</h3>
                                 <p>We provide high Quality of product and services through modern automation process in Testing.</p>
                                 <div style="margin-top: auto;">
-                                    <a href="./services/testing.html" style="color: #0385c2; text-decoration: none;">
+                                    <a href="./trainings/testing.html" style="color: #0385c2; text-decoration: none;">
                                         See More <strong><span style="font-weight: bold;">&#8594;</span></strong>
                                     </a>
                                 </div>
