--- a/trainings/aem.html
+++ b/trainings/aem.html
@@ -88,23 +88,23 @@
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
-									<a href="#" class="dropdown-item">AEM</a>
-									<a href="#" class="dropdown-item">Software Testing</a>
-									<a href="#" class="dropdown-item">Dev-ops</a>
+									<a href="../services/aem.html" class="dropdown-item">AEM</a>
+									<a href="../services/testing.html" class="dropdown-item">Software Testing</a>
+									<a href="../services/devops.html" class="dropdown-item">Dev-ops</a>
 								</div>
 							</div>
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Trainings</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
-									<a href="#" class="dropdown-item">AEM</a>
-									<a href="#" class="dropdown-item">Software Testing</a>
-									<a href="#" class="dropdown-item">Dev-ops</a>
+									<a href="../trainings/aem.html" class="dropdown-item">AEM</a>
+									<a href="../trainings/testing.html" class="dropdown-item">Software Testing</a>
+									<a href="../trainings/devops.html" class="dropdown-item">Dev-ops</a>
 								</div>
 							</div>
 							
 							
-							<a class="nav-item nav-link " href="about.html">About Us</a>
-							<a class="nav-item nav-link " href="contact.html">Contact</a>
+							<a class="nav-item nav-link " href="../about.html">About Us</a>
+							<a class="nav-item nav-link " href="../contact.html">Contact</a>
 						</div>
 
 					</div>
