--- a/trainings/testing.html
+++ b/trainings/testing.html
@@ -74,7 +74,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light ">
 				<div class="container" style="padding-bottom: 0 !important;">
 					<div style="width:25%;float:left;margin-top:-10px;">
-						<a href="#" class=""><img src="./images/logo-4.png" style="width:275px;"></img></a>
+						<a href="#" class=""><img src="../images/logo-4.png" style="width:275px;"></img></a>
 					</div>
 
 					<button type="button" class="navbar-toggler" data-bs-toggle="collapse"
@@ -83,13 +83,13 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<div class="navbar-nav">
-							<a class="nav-item nav-link nav-link-infodales active" href="./index.html">Home</a>
+							<a class="nav-item nav-link nav-link-infodales active" href="../index.html">Home</a>
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
-									<a href="./services/aem.html" class="dropdown-item">AEM</a>
-									<a href="./services/testing.html" class="dropdown-item">Software Testing</a>
-									<a href="./services/devops.html" class="dropdown-item">Dev-ops</a>
+									<a href="../services/aem.html" class="dropdown-item">AEM</a>
+									<a href="../services/testing.html" class="dropdown-item">Software Testing</a>
+									<a href="../services/devops.html" class="dropdown-item">Dev-ops</a>
 								</div>
 							</div>
 							<div class="nav-item dropdown">
