--- a/services/testing.html
+++ b/services/testing.html
@@ -61,7 +61,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<div class="navbar-nav">
-							<a class="nav-item nav-link nav-link-infodales active" href="index.html">Home</a>
+							<a class="nav-item nav-link nav-link-infodales active" href="../index.html">Home</a>
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
