check contact us once

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <main class="container-fluid">
 			
-			<section style="background-color: #fff; height: auto; padding: 40px 0;">
+			<section style="background-color: #000; height: auto; padding: 40px 0;">
                 <div class="container">
                     <div class="infodales-heading">
                         Who we are
