testing service page added

--- a/index.html
+++ b/index.html
@@ -65,32 +65,35 @@
 								Accelerating your solution with our Knowledge and Resources.
 							</span>
 						</div>
-						<div>
-							<p>
-							We at InfoDales are positioned as one of the top engineers of the IT
-							industry offering quick, concise, and reliable services catering to various industries
-							like and other industries verticals.
-							<br>&nbsp;
-							<br>
-							We design, develop and customize web platforms that are maintainable and
-							technical debt-free in long term, which requires years and years of hands-on
-							development experience. Our customer-centric solutions and architecting
-							experience help organizations to make a global footprint.
-							</p>
-						</div>
+						
 					</div>
+                </div>
+                <div class="clearfix-subheading">
+                    <div class="left">
+                    <p>
+                    We at InfoDales are positioned as one of the top engineers of the IT
+                    industry offering quick, concise, and reliable services catering to various industries
+                    like and other industries verticals.
+                    <br>&nbsp;
+                    <br>
+                    We design, develop and customize web platforms that are maintainable and
+                    technical debt-free in long term, which requires years and years of hands-on
+                    development experience. Our customer-centric solutions and architecting
+                    experience help organizations to make a global footprint.
+                    </p>
+                    </div>
                 </div>
             </section>
         </header>
 
         <main class="container-fluid">
 			
-			<section style="background-color: #000; height: auto; padding: 40px 0;">
+			<section style="background-color: #ffffff; height: auto; padding: 40px 0;">
                 <div class="container">
-                    <div class="infodales-heading">
+                    <div class="infodales-heading" style="color: #000;">
                         Who we are
                     </div>
-                    <div class="infodales-text">
+                    <div class="infodales-text" style="color: #000;">
                         Our team has a solid programming foundation and in-depth knowledge. Our team has acquired various difficult certifications, which makes us one of the best in the market.
 						We have proven abilities to design solutions according to customer needs with best practices and solutions flexible enough to expand further. 
 						Being a full-stack team, we have worked on frontend technologies, automation frameworks for quality control, and production deployments using the Jenkins CI/CD pipelines.
@@ -160,12 +163,12 @@
                 </div>
             </section>
 			
-			<section  class="infodales-bios" style="background-color: #fff; height: auto; padding: 40px 0;">
+			<section  class="infodales-bios" style="background-color: #000; height: auto; padding: 40px 0;">
                 <div class="container">
-                    <div class="infodales-heading">
+                    <div class="infodales-heading" style="color: #ffffff;">
                         Our Team
                     </div>
-                    <div class="infodales-text">
+                    <div class="infodales-text" style="color: #ffffff;">
                         We at InfoDales are positioned as one of the top engineers of the IT industry offering quick, concise, and reliable services catering to various industries like and other industries verticals. We design, develop and
                         customize web platforms that are maintainable and technical debt-free in long term, which requires years and years of hands-on development experience. Our customer-centric solutions and architecting experience help
                         organizations to make a global footprint.
