--- a/trainings/aem.html
+++ b/trainings/aem.html
@@ -136,8 +136,8 @@
 
 					</div>
 					<div class="col-md-1"></div>
-					<div class="col-md-2 training-logo" style="background-color: #e6e6e6;">
-						<img src="../images/public/aem.png">
+					<div class="col-md-2 " >
+						
 					</div>
 
 				</div>
