--- a/trainings/testing.html
+++ b/trainings/testing.html
@@ -95,9 +95,9 @@
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Trainings</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
-									<a href="./trainings/aem.html" class="dropdown-item">AEM</a>
-									<a href="./trainings/testing.html" class="dropdown-item">Software Testing</a>
-									<a href="./trainings/devops.html" class="dropdown-item">Dev-ops</a>
+									<a href="../trainings/aem.html" class="dropdown-item">AEM</a>
+									<a href="../trainings/testing.html" class="dropdown-item">Software Testing</a>
+									<a href="../trainings/devops.html" class="dropdown-item">Dev-ops</a>
 								</div>
 							</div>
 							
@@ -130,8 +130,7 @@
 
 					</div>
 					<div class="col-md-1"></div>
-					<div class="col-md-2 training-logo" style="background-color: #e6e6e6;">
-						<img src="../images/public/cypress.png">
+					<div class="col-md-2 " >
 					</div>
 
 				</div>
