--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>InfoDales Tech Solution</title>
+        <title>Home | InfoDales Tech Solution</title>
         <meta name="description" content="IT Consulting Services" />
-        <meta property="og:title" content="InfoDales Tech Solutions" />
+        <meta property="og:title" content="Home | InfoDales Tech Solutions" />
         <meta property="og:description" content="IT Consulting Services" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
