--- a/trainings/aem.html
+++ b/trainings/aem.html
@@ -45,34 +45,6 @@
 		  document.documentElement.scrollTop = 0;
 		}
 		</script>
-
-	<!--
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>-->
 	<header>
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
@@ -158,7 +130,7 @@
 					<div class=" col-md-7 col-sm-12 col-12 training-content-left">
 						<h2 class="infodales-training-overview">AEM Course Overview</h2>
 						<div class="infodales-training-summery">
-							<p>AEM 6.5 Training from Mindmajix teaches you the essential skills needed to develop and
+							<p>AEM 6.5 Training from InfoDales teaches you the essential skills needed to develop and
 								debug Adobe Experience Management through best practices.
 								In this AEM course, you’ll learn the advanced methods used for developing websites being
 								an AEM developer.
