--- a/services/aem.html
+++ b/services/aem.html
@@ -300,43 +300,12 @@ crossorigin="anonymous"
 	</main>
 	<footer class="footer-section">
         <div class="container">
-            <div class="footer-cta pt-5 pb-5">
-                <div class="row">
-                    <div class="col-xl-6 col-md-6 mb-30">
-                        <div class="single-cta">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="cta-text">
-                                <h4>Find us</h4>
-                                <span>Plot no 46, Doye layout, zingabai takli, Nagpur</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-3 mb-30">
-                        <div class="single-cta">
-                            <i class="fas fa-phone"></i>
-                            <div class="cta-text">
-                                <h4>Call us</h4>
-                                <span>+91 7770018820</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-3 mb-30">
-                        <div class="single-cta">
-                            <i class="far fa-envelope-open"></i>
-                            <div class="cta-text">
-                                <h4>Mail us</h4>
-                                <span>info@infodales.com</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="footer-content pt-5 pb-5">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="./index.html"><img src="./images/logo-4.png" class="img-fluid" alt="logo"></a>
+                                <a href="./index.html"><img src="../images/logo-4.png" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>We design, develop and customize web platforms that are maintainable and
