--- a/trainings/testing.html
+++ b/trainings/testing.html
@@ -162,103 +162,87 @@
 						<div class="infodales-cource-includes">
 							<h2 class="infodales-training-overview">Software Testing Training includes</h2>
 							<div class="row">
-								<div class="col-md-6 training-cource-includes-left">
-									<div class="container-fluid infodales-includes-mobile">
-
-
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
+								<div class="row">
+									<div class="col-md-6 training-cource-includes-left">
+										<div class="container-fluid infodales-includes-mobile">
+	
+	
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/clock.png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">2 hours of session everyday</p>
+												</div>
 											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">2 hours of session everyday</p>
+	
+	
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/interview (1).png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">Regular interview preparation</p>
+												</div>
 											</div>
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/interview.png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">One-on-One doubt clearing</p>
+												</div>
+											</div>
+											
+	
 										</div>
-
-
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Regular interview preparation</p>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">One-on-One doubt clearing</p>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Realtime project usecases</p>
-											</div>
-										</div>
-
 									</div>
-								</div>
-
-								<div class="col-md-6 training-cource-includes-left">
-									<div class="container-fluid infodales-includes-mobile">
-
-
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
+	
+									<div class="col-md-6 training-cource-includes-left">
+										<div class="container-fluid infodales-includes-mobile">
+	
+	
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/schedule.png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">Flexible schedules</p>
+												</div>
 											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Flexible schedules</p>
+	
+	
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/certificate.png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">certification oriented syllabus</p>
+												</div>
 											</div>
+											<div class="row">
+												<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+													<img class="course-includes-icon"
+														src="../images/icon/project-management.png">
+												</div>
+												<div
+													class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
+													<p style="font-weight: bold;">Realtime project usecases</p>
+												</div>
+											</div>
+										
+	
 										</div>
-
-
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">certification oriented syllabus</p>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">One-on-One doubt clearing</p>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-												<img class="course-includes-icon"
-													src="../images/icon/idea-g4cd6a6e21_640-removebg-preview.png">
-											</div>
-											<div
-												class="col_pd_10 col-lg-8 col-md-8 col-sm-8 col-8 training-feature-text">
-												<p style="font-weight: bold;">Realtime project ysecases</p>
-											</div>
-										</div>
-
 									</div>
 								</div>
 							</div>
