--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
     </head>
     <body>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <button onclick="topFunction()" id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
+            src="./images/icon/up-arrow.png"></button>
 	<script>
 		// Get the button
 		let mybutton = document.getElementById("myBtn");
@@ -242,9 +243,12 @@
                                 <div class="footer-widget-heading">
                                     <h3>Follow Us</h3>
                                 </div>
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                    <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                                <a href="#"><img class="social-icon"
+                                    src="./images/icon/facebook.png"></a>
+                                    <a href="#"><img class="social-icon"
+                                        src="./images/icon/instagram.png"></a>
+                                    <a href="#"><img class="social-icon"
+                                        src="./images/icon/google-plus.png"></a>
                             </div>
                         </div>
                     </div>
