--- a/trainings/aem.html
+++ b/trainings/aem.html
@@ -23,7 +23,8 @@
 </head>
 
 <body style="background: url(../images/banners/training2.jpg) no-repeat;">
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+	<button onclick="topFunction()" id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
+		src="../images/icon/up-arrow.png"></button>
 	<script>
 		// Get the button
 		let mybutton = document.getElementById("myBtn");
@@ -632,9 +633,12 @@
                             <div class="footer-widget-heading">
                                 <h3>Follow Us</h3>
                             </div>
-                            <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            <a href="#"><img class="social-icon"
+								src="../images/icon/facebook.png"></a>
+                                <a href="#"><img class="social-icon"
+									src="../images/icon/instagram.png"></a>
+                                <a href="#"><img class="social-icon"
+									src="../images/icon/google-plus.png"></a>
                         </div>
                     </div>
                 </div>
