training icon changed

--- a/trainings/testing.html
+++ b/trainings/testing.html
@@ -587,7 +587,7 @@
 					<div class="col-lg-4 col-md-12 col-sm-12 col-12  training-content-right">
 						<div class="container">
 							<img class="cource-overview-img"
-								src="../images/public/what-is-aem-29__1_-removebg-preview.png">
+								src="../images/public/test.png">
 						</div>
 						<div class="container training-form-container"
 							style="border-radius: 5px;box-shadow: 0 0 7px #e4e2e2!important;border: 1px solid #e0dddd!important; ">
