padding added with nav

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 			</nav>
 		</section>
 		<section class="infodales-banner-training"
-			style="background: transparent; height: 400px;background: url('./images/banners/email-marketing-g960c24ab0_1280.png') no-repeat;">
+			style="background: transparent; height: 400px;background: url('./images/banners/email-marketing-g960c24ab0_1280.png') no-repeat; background-size: cover;">
 
 			<div class="container infodales-banner-training">
 				<div class="row training-header-mobile">
