--- a/trainings/aem.html
+++ b/trainings/aem.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body style="background: url(../images/banners/training2.jpg) no-repeat;">
+<body style="background: url(../images/banners/training2.jpg) no-repeat; background-size: cover;">
 	<button onclick="topFunction()" id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
 		src="../images/icon/up-arrow.png"></button>
 	<script>
