--- a/services/aem.html
+++ b/services/aem.html
@@ -27,7 +27,7 @@ crossorigin="anonymous"
 
 </head>
 
-<body style="background: url(../images/banners/training2.jpg) no-repeat;">
+<body style="background: url(../images/banners/training2.jpg) no-repeat; background-size: cover;">
 	<button onclick="topFunction()" id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
 		src="../images/icon/up-arrow.png"></button>
 	<script>
